refactor: Migrate to tanstack/react-query v5

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.71.10",
     "@tosspayments/tosspayments-sdk": "^2.3.4",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
@@ -17,12 +18,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
-    "react-query": "^3.39.3",
     "react-toastify": "^11.0.3",
     "sass": "^1.85.1",
     "zustand": "^4.2.0"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.71.10",
     "@types/node": "^12.12.21",
     "@types/react": "^19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
