--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.71.10",
     "@tosspayments/tosspayments-sdk": "^2.3.4",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
