--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "private": true,
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,json,css,scss,md}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -37,6 +43,8 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
     "postcss": "^8.5.2",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17",
